--- a/package.json
+++ b/package.json
@@ -17,8 +17,5 @@
     "url": "https://github.com/gratefuljed/gratefuljed.github.io/issues"
   },
   "homepage": "https://github.com/gratefuljed/gratefuljed.github.io#readme",
-  "dependencies": {
-    "live-server": "^1.2.0",
-    "node-sass": "^4.9.0"
-  }
+  "dependencies": {}
 }
